[package]
name = "pingpong"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.4"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12.3", features = ["tls"] }
tokio-rustls = "0.22"
tonic-build = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
